# rknn_model_zoo

./: .gitignore  .gitmodules  FAQ.md  FAQ_CN.md  README.md  README_CN.md  README_EN.md  build-android.sh  build-linux.sh  scaling_frequency.sh
capi_tools/toolkit1/rknn_capi_test/: CMakeLists.txt  build.sh  build_rk1808.sh  build_rk3399pro_android.sh  build_rk3399pro_linux.sh  build_rv1109_1126.sh
capi_tools/toolkit1/rknn_capi_test/include/: type_decode.h
capi_tools/toolkit1/rknn_capi_test/install/RK1808/Linux/rknn_capi_test/: rknn_capi_test  rknn_capi_test_zero_copy
capi_tools/toolkit1/rknn_capi_test/install/RK1808/rknn_capi_test/: rknn_capi_test  rknn_capi_test_zero_copy
capi_tools/toolkit1/rknn_capi_test/install/RK3399PRO/Linux/rknn_capi_test/: rknn_capi_test
capi_tools/toolkit1/rknn_capi_test/install/RV1109_1126/Linux/rknn_capi_test/: rknn_capi_test  rknn_capi_test_zero_copy
capi_tools/toolkit1/rknn_capi_test/install/RV1109_1126/rknn_capi_test/: rknn_capi_test  rknn_capi_test_zero_copy
capi_tools/toolkit1/rknn_capi_test/src/: drm_func.c  main.cc
capi_tools/toolkit2/rknn_capi_test/full_driver/: CMakeLists.txt
capi_tools/toolkit2/rknn_capi_test/full_driver/src/: rknn_api_test.cpp  rknn_api_test_zero_copy.cpp  rknn_api_test_zero_copy_eld.cpp  transpose_utils.h
capi_tools/toolkit2/rknn_capi_test/mini_driver/: CMakeLists.txt
capi_tools/toolkit2/rknn_capi_test/mini_driver/cnpy/: cnpy.h
capi_tools/toolkit2/rknn_capi_test/mini_driver/src/: float16.h  rknn_api_native_nhwc_output_test.c  rknn_api_native_output_test.c
examples/LPRNet/cpp/: CMakeLists.txt  lprnet.h  main.cc
examples/LPRNet/cpp/rknpu1/: lprnet.cc
examples/LPRNet/cpp/rknpu2/: lprnet.cc  lprnet_rv1106_1103.cc
examples/RetinaFace/cpp/: CMakeLists.txt  main.cc  retinaface.h  rknn_box_priors.h
examples/RetinaFace/cpp/rknpu1/: retinaface.cc
examples/RetinaFace/cpp/rknpu2/: retinaface.cc
examples/clip/cpp/: CMakeLists.txt  clip.h  main.cc  postprocess.cc  postprocess.h
examples/clip/cpp/rknpu2/: clip.cc
examples/clip/cpp/rknpu2/rknn_clip_utils/: rknn_clip_utils.cc  rknn_clip_utils.h
examples/clip/cpp/tokenizer/: clip_tokenizer.cpp  clip_tokenizer.h
examples/deeplabv3/cpp/: CMakeLists.txt  deeplabv3.h  main.cc
examples/deeplabv3/cpp/gpu_postprocess/: CMakeLists.txt  Log.h  gpu_compose_impl.cc  gpu_compose_impl.h  opencl_memory.cc  opencl_memory.h  opencl_workspace.cc  opencl_workspace.h  opencl_wrapper.cc  opencl_wrapper.h  workflow.cc  workflow.h
examples/deeplabv3/cpp/gpu_postprocess/cl_kernels/: kernel_upsampleSoftmax.h
examples/deeplabv3/cpp/rknpu1/: deeplabv3.cc
examples/deeplabv3/cpp/rknpu2/: deeplabv3.cc
examples/lite_transformer/cpp/: CMakeLists.txt  lite_transformer.h  main.cc
examples/lite_transformer/cpp/rknpu1/: lite_transformer.cc
examples/lite_transformer/cpp/rknpu1/rkdemo_utils/: rknn_demo_utils.cc  rknn_demo_utils.h
examples/lite_transformer/cpp/rknpu2/: lite_transformer.cc
examples/lite_transformer/cpp/rknpu2/rkdemo_utils/: rknn_demo_utils.cc  rknn_demo_utils.h
examples/lite_transformer/cpp/utils/: easy_timer.h  type_half.h
examples/lite_transformer/cpp/utils/bpe_tools/: bpe_tools.cc  bpe_tools.h
examples/lite_transformer/cpp/utils/cnpy/: cnpy.cpp  cnpy.h
examples/mms_tts/cpp/: CMakeLists.txt  main.cc  mms_tts.h  process.cc  process.h
examples/mms_tts/cpp/rknpu2/: mms_tts.cc
examples/mobilenet/cpp/: CMakeLists.txt  main.cc  mobilenet.h
examples/mobilenet/cpp/rknpu1/: mobilenet.cc
examples/mobilenet/cpp/rknpu2/: mobilenet.cc  mobilenet_rv1106_1103.cc
examples/mobilesam/cpp/: CMakeLists.txt  main.cc  mobilesam.h  postprocess.cc  postprocess.h  preprocess.cc  preprocess.h
examples/mobilesam/cpp/rknpu2/: mobilesam.cc
examples/mobilesam/cpp/rknpu2/rknn_mobilesam_utils/: rknn_mobilesam_utils.cc  rknn_mobilesam_utils.h
examples/ppyoloe/cpp/: CMakeLists.txt  main.cc  postprocess.cc  postprocess.h  ppyoloe.h
examples/ppyoloe/cpp/rknpu1/: ppyoloe.cc
examples/ppyoloe/cpp/rknpu2/: ppyoloe.cc
examples/wav2vec2/cpp/: CMakeLists.txt  main.cc  process.cc  process.h  wav2vec2.h
examples/wav2vec2/cpp/rknpu2/: wav2vec2.cc
examples/yolo11/cpp/: CMakeLists.txt  main.cc  postprocess.cc  postprocess.h  yolo11.h
examples/yolo11/cpp/rknpu1/: yolo11.cc
examples/yolo11/cpp/rknpu2/: yolo11.cc  yolo11_rv1106_1103.cc  yolo11_zero_copy.cc
examples/yolo_world/cpp/: CMakeLists.txt  main.cc  postprocess.cc  postprocess.h
examples/yolo_world/cpp/rknpu2/clip_text/: clip_text.cc  clip_text.h
examples/yolo_world/cpp/rknpu2/yolo_world/: yolo_world.cc  yolo_world.h
examples/yolov5_seg/cpp/: CMakeLists.txt  main.cc  postprocess.cc  postprocess.h  yolov5_seg.h
examples/yolov5_seg/cpp/rknpu1/: postprocess.cc  yolov5_seg.cc
examples/yolov5_seg/cpp/rknpu2/: postprocess.cc  yolov5_seg.cc
examples/yolov7/cpp/: CMakeLists.txt  main.cc  postprocess.cc  postprocess.h  yolov7.h
examples/yolov7/cpp/rknpu1/: yolov7.cc
examples/yolov7/cpp/rknpu2/: yolov7.cc  yolov7_rv1106_1103.cc
examples/yolox/cpp/: CMakeLists.txt  main.cc  postprocess.cc  postprocess.h  yolox.h
examples/yolox/cpp/rknpu1/: yolox.cc
examples/yolox/cpp/rknpu2/: yolox.cc  yolox_rv1106_1103.cc
examples/zipformer/cpp/: CMakeLists.txt  main.cc  process.cc  process.h  zipformer.h
examples/zipformer/cpp/rknpu2/: zipformer.cc
models/CV/object_detection/yolo/RKNN_C_demo/RKNN_toolkit_1/rknn_yolo_demo/: CMakeLists.txt  README.md  build.sh  build_rk1808.sh  build_rk3399pro_android.sh  build_rk3399pro_linux.sh  build_rv1109_1126.sh
models/CV/object_detection/yolo/RKNN_C_demo/RKNN_toolkit_2/rknn_yolo_demo/: CMakeLists.txt  README.md  README_EN.md  (+3 more)
models/NLP/NMT/lite-transformer/RKNN_C_demo/RKNPU/: CMakeLists.txt  README.md  build_rk1808.sh  build_rk3399pro_android.sh  build_rk3399pro_linux.sh
models/NLP/NMT/lite-transformer/RKNN_C_demo/RKNPU2/: CMakeLists.txt  README.md  build-android_RK356X.sh  build-linux_RK356X.sh
utils/: CMakeLists.txt  audio_utils.c  audio_utils.h  common.h  file_utils.c  file_utils.h  font.h  image_drawing.c  image_drawing.h  image_utils.c  image_utils.h
(+558 files in other folders)
